# SimpleNeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_env.bat  environment.yml  init_env.bat  main.cpp
.github/workflows/: linux.yml
fpga/project/ANN/solution1/: script.tcl
fpga/src/: MatrixFPGA.hpp  NeuralNet.cpp  NeuralNet.hpp  testbench.cpp
fpga/test_inputs/: mnist_sig_quad_fpga.txt
include/: ActivationFunction.hpp  NeuralNet.hpp
include/Mnist2Eigen/: MnistReader.hpp
libs/Mnist2Eigen/: CMakeLists.txt  MnistReader.cpp  MnistReader.hpp
libs/SimpleNeuralNet/: ActivationFunction.hpp  CMakeLists.txt  LossFunction.hpp  NeuralNet.hpp
libs/SimpleNeuralNet/include/: ActivationFunction.hpp  NeuralNet.hpp
libs/SimpleNeuralNet/src/: NeuralNet.cpp
libs/pySimpleNeuralNet/: CMakeLists.txt  pyNeuralNet.cpp
tests/: CMakeLists.txt  mnist_model_relu.json  mnist_model_relu_cross.json  mnist_model_saved.json  mnist_model_saved.txt  mnist_model_sigmoid_quadratic.json  model_sigmoid.json  tests.cpp
tools/: build_cmake.bat  convert_json_model_to_fpga.py  init_env.bat
